fix: text wrap

--- a/src/searchPanelStyle.css
+++ b/src/searchPanelStyle.css
@@ -268,6 +268,7 @@ body {
 
 .itags-search-resultContent {
     margin-top: 5px;
+    word-wrap: break-word;
 }
 
 .itags-search-resultSection:hover {
